Improve counting in lists - remove count from the post title - add counter to list layout - add weights to keep original order - add slug to posts to have cleaner URLs - followup: content directories could be also renamed

--- a/public/fotoaparaty/4.-sx-70/index.html
+++ b/public/fotoaparaty/4.-sx-70/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>4. SX-70 | Polaroid archive</title>
+<title>SX-70 | Polaroid archive</title>
 
       <link rel="stylesheet" href="/css/main.min.667fec47b3184171409dbedf101ee21cca02b581edfe9ab9c285d45662282e34.css" integrity="sha256-Zn/sR7MYQXFAnb7fEB7iHMoCtYHt/pq5woXUVmIoLjQ=" crossorigin="anonymous">
 
@@ -43,7 +43,7 @@
   </header>
   <main>
     
-  <h1>4. SX-70</h1>
+  <h1>SX-70</h1>
 
   
   
