--- a/public/filmy/1.-i-type-and-go/index.html
+++ b/public/filmy/1.-i-type-and-go/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>1. I-Type and Go | Polaroid archive</title>
+<title>I-Type and Go | Polaroid archive</title>
 
-      <link rel="stylesheet" href="/css/main.min.667fec47b3184171409dbedf101ee21cca02b581edfe9ab9c285d45662282e34.css" integrity="sha256-Zn/sR7MYQXFAnb7fEB7iHMoCtYHt/pq5woXUVmIoLjQ=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/main.css">
 
 
-      <script src="/js/main.23cd0c7d837263b9eaeb96ee2d9ccfa2969daa3fa00fa1c1fe8701a9b87251a1.js" integrity="sha256-I80MfYNyY7nq65buLZzPopadqj&#43;gD6HB/ocBqbhyUaE=" crossorigin="anonymous"></script>
+      <script src="/js/main.js"></script>
 
 
 </head>
@@ -43,7 +43,7 @@
   </header>
   <main>
     
-  <h1>1. I-Type and Go</h1>
+  <h1>I-Type and Go</h1>
 
   
   
