--- a/public/filmy/kinofilmy/index.html
+++ b/public/filmy/kinofilmy/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>Kinofilmy | Polaroid collection</title>
+<title>Kinofilmy | Polaroid archive</title>
 
-    <link rel="stylesheet" href="/css/main.css">
+      <link rel="stylesheet" href="/css/main.min.667fec47b3184171409dbedf101ee21cca02b581edfe9ab9c285d45662282e34.css" integrity="sha256-Zn/sR7MYQXFAnb7fEB7iHMoCtYHt/pq5woXUVmIoLjQ=" crossorigin="anonymous">
 
 
-      <script src="/js/main.js"></script>
+      <script src="/js/main.23cd0c7d837263b9eaeb96ee2d9ccfa2969daa3fa00fa1c1fe8701a9b87251a1.js" integrity="sha256-I80MfYNyY7nq65buLZzPopadqj&#43;gD6HB/ocBqbhyUaE=" crossorigin="anonymous"></script>
 
 
 </head>
 <body>
   <header>
-    <h1>Polaroid collection</h1>
+    <h1>Polaroid archive</h1>
 
   <nav>
     <ul>
@@ -29,6 +29,12 @@
     </li>
     <li>
       <a href="/polaroidy/">Polaroidy</a>
+    </li>
+    <li>
+      <a href="/ostatn%C3%AD/">Ostatní</a>
+    </li>
+    <li>
+      <a href="/blog/">Blog</a>
     </li>
     </ul>
   </nav>
