--- a/public/polaroidy/5.-polaroidy-z-instaxu--nevlastněné/index.html
+++ b/public/polaroidy/5.-polaroidy-z-instaxu--nevlastněné/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>5. Polaroidy z Instaxu – nevlastněné | Polaroid archive</title>
+<title>Polaroidy z Instaxu – nevlastněné | Polaroid archive</title>
 
       <link rel="stylesheet" href="/css/main.min.667fec47b3184171409dbedf101ee21cca02b581edfe9ab9c285d45662282e34.css" integrity="sha256-Zn/sR7MYQXFAnb7fEB7iHMoCtYHt/pq5woXUVmIoLjQ=" crossorigin="anonymous">
 
@@ -43,7 +43,7 @@
   </header>
   <main>
     
-  <h1>5. Polaroidy z Instaxu – nevlastněné</h1>
+  <h1>Polaroidy z Instaxu – nevlastněné</h1>
 
   
   
